--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h1>Index</h1>
+            <h1>Index (hoaipx)</h1>
             <p>
                 <a asp-action="Create">Create New</a>
             </p>
