--- a/Views/User/Order.cshtml
+++ b/Views/User/Order.cshtml
@@ -27,7 +27,7 @@
         </tr>
     </thead>
     <tbody>
-        @if (Model.Count() == 0)
+        @if (!Model.Any())
         {
             <tr><td colspan="5" style="text-align:center">None Data To Show</td></tr>
         }
